@@ -1,6 +1,6 @@
 Package: synchronicity
-Version: 1.0.10
-Date: 2010-06-18
+Version: 1.0.11
+Date: 2010-10-30
 Title: Boost mutex functionality for R.
 Author: Michael J. Kane <kaneplusplus@gmail.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
