@@ -15,8 +15,8 @@ support interprocess communication (ipc) and message passing.
 \tabular{ll}{
 Package: \tab synchronicity\cr
 Type: \tab Package\cr
-Version: \tab 1.0.10\cr
-Date: \tab 2010-06-18\cr
+Version: \tab 1.0.11\cr
+Date: \tab 2010-10-30\cr
 License: \tab LGPL-3\cr
 OS_type: \tab unix\cr
 Copyright: \tab (C) 2010 Michael J. Kane\cr
